fix: input style on iOS

--- a/src/components/delegateForm/index.scss
+++ b/src/components/delegateForm/index.scss
@@ -72,6 +72,7 @@
     letter-spacing: 0.2px;
     color: #98a2a9;
     text-indent: 20px;
+    padding-left: 0;
     outline: none;
   }
   .form-button {
